--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,12 +22,12 @@
 				"vscode-icons-team.vscode-icons",
 				"wayou.vscode-todo-highlight"
 			],
-			/*"settings": {
+			"settings": {
 				"editor.fontSize": 32,
 				"terminal.integrated.fontSize": 24,
 				"editor.wordWrap": "on"
 			}
-			*/
+			
 		}
 		
 	 }
